integ-tests/tests/snapshots/parser__bad_floats__no_digit_after_pos.snap
---
source: integ-tests/tests/parser.rs
assertion_line: 94
expression: error
---
error[invalid-number]: 
  ┌─ no_digit_after_pos:1:5
  │
1 │ a = +_2
  │     ^ unable to parse number
