integ-tests/tests/snapshots/parser__bad_floats__underscore_before_dot.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ underscore_before_dot:1:5
  │
1 │ a = 73_.5
  │     ^^^ unable to parse number
